# latex-cv

./: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/pixcel_cv/: __init__.py  cli.py  generator.py  loaders.py  models.py
src/pixcel_cv/templates/: __init__.py  anschreiben.tex  german_cv.tex
tests/: show_behavior_change.py  test_cli.py  test_generator.py  test_models.py  test_onedrive_integration.py  test_project_filtering.py
yaml/: cv_config.yaml
yaml/examples/: anschreiben.yaml  basedata.yaml  berufliche_stationen.yaml  cv_basis.yaml  projekt_historie.yaml
